src/objects/PortalServiceAccess__e.object
<CustomObject>
    <description>Platform event definition to be used for Portal Service Access record changes that require an integration with middleware to support User provisioning processes.</description>
    <label>Portal Service Access PE</label>
    <pluralLabel>Portal Service Accesses PE</pluralLabel>
    <fields>
        <fullName>EventType__c</fullName>
        <description>The type of operation that resulted in the platform event being fired (Create, Update, Delete, Undelete).</description>
        <label>EventType</label>
        <length>55</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FunctionalRole__c</fullName>
        <description>The name of the Functional Role (Portal Service) that is related to this Portal Service Access event.</description>
        <label>FunctionalRole</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordId__c</fullName>
        <description>18 character, case insensitive, Salesforce record Id representing the record that was modified.</description>
        <label>RecordId</label>
        <length>18</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <description>The name of the record type of the record that was changed.</description>
        <label>RecordType</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
    </fields>
</CustomObject>